fixing topbar on mobile

--- a/client/src/styles/spells.css
+++ b/client/src/styles/spells.css
@@ -94,7 +94,7 @@
 }
 
 @media screen and (max-width: 960px) {
-  .flex-item.school, .flex-item.classes, .flex-item.options {
+  .flex-item.school, .flex-item.classes, .flex-item.options, .number-of-spells {
     display: none;
   }
 
@@ -121,5 +121,11 @@
   .spells-header .search {
     top: 2rem;
     width: 60%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .spells-header-left, .spells-header-right {
+    width: auto;
   }
 }
